# Bootstrap_cpp

./: Bootstrap_cpp.vcxproj  CMakeLists.txt
Linuxhack/: Appmain.cpp
Source/: Appmain.cpp  Stdinclude.h  Stdinclude.hpp
Source/Bootstrap/: Bootstrap.h  Processtype.cpp  Spawner.cpp
Source/Configuration/: Defines.h  Defines.hpp  Macros.hpp
Source/Utility/Binary/: Patternscan.cpp
Source/Utility/Text/: Logfile.h  Variadicstring.h
